--- a/index.html
+++ b/index.html
@@ -29,28 +29,21 @@
         <div class="col">
             <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-cartas">
-                <!-- <img class="carta" src="assets/cartas/10C.png" alt="">
                 <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt=""> -->
             </div>
         </div>
     </div>
 
-    <div class="row container mt-2">
+    <div class="row container mt-4">
         <div class="col">
             <h1>Computadora - <small>0</small></h1>
             <div id="computadora-cartas">
-                <!-- <img class="carta" src="assets/cartas/10C.png" alt="">
                 <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt="">
-                <img class="carta" src="assets/cartas/10C.png" alt=""> -->
             </div>
         </div>
     </div>
     
+    <script src="assets/js/uderscore-min.js"></script>
     <script src="assets/js/juego.js"></script>
 
 </body>
